fix: focus on secondary nav overlaps

--- a/resources/css/components/_navigation.css
+++ b/resources/css/components/_navigation.css
@@ -205,6 +205,10 @@ button.nav-button .indicator {
     z-index: 1;
 }
 
+.secondary .nav-link {
+    display: inline-block;
+}
+
 @media (min-width: 48rem) {
     .primary ul,
     .languages ul ul,
